--- a/art/todo_list/src/App.html
+++ b/art/todo_list/src/App.html
@@ -1,30 +1,62 @@
 <script>
 
 	import Navbar from './components/Navbar.html';
-	import SearchBar from './components/SearchBar.html';
+	import AddTask from './components/Form/AddTask.html';
 	import List from './components/List.html';
 
-	let search = ""
-	let array = []
+	$: tasks = [
+		{
+			category: "Work",
+			todo: "todo 1",
+			completed: false,
+			date: new Date() 
+		},
+		{
+			category: "Home",
+			todo: "todo 2", 
+			completed: true,
+			date: new Date()
+		},
+		{
+			category: "Hobbies",
+			todo: "todo 3", 
+			completed: false,
+			date: new Date()
+		},
+	]
 
-	const handleSubmit = () => {
+	const handleSubmit = (event) => {
+
+		if (event.detail.wesh === "") {
+			
+			alert("Please add a task")
+
+		} else {
+			
+			const newTodo = {
+				
+				category: event.detail.cate,
+				todo: event.detail.wesh,
+				completed: false
+			
+			}
+
+			tasks = [...tasks, newTodo]
 		
-		const newTodo = {
-			todo: search,
-			completed: false
 		}
 
-		array = [...array, newTodo]
-		search = ""
-	
-	}
-
-	const test = () => {
-		console.log(search)
 	}
 
 </script>
 
+<!-- fin du script -->
+
 <Navbar />
-<SearchBar bind:search={search} on:submit={handleSubmit}/>
-<List array={array} />
+
+<AddTask on:submit={handleSubmit}/>
+
+<div class="flex justify-between">
+	<List tasks={tasks} category="Work"/>
+	<List tasks={tasks} category="Hobbies"/>
+	<List tasks={tasks} category="Home"/>
+</div>
