--- a/art/todo_list/public/index.html
+++ b/art/todo_list/public/index.html
@@ -9,11 +9,12 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/output.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
 	
 
 	<script defer src='/build/bundle.js'></script>
 </head>
 
-<body>
+<body class='p-0 background'>
 </body>
 </html>
